# sovereign-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  sovereign-mcp.service
.github/workflows/: ci.yml
data/: knowledge-base.json
src/: __main__.py  knowledge.py  main.py
src/tools/: article.py  diagnose.py  search.py  tags.py
tests/: test_tools.py
